# profunctor-optics

./: .gitignore  LICENSE  README.md  haddock-upload.sh  packcheck.sh  stack.yaml
.circleci/: config.yml
dioids/: dioids.cabal
dioids/src/: Orphans.hs  P.hs
dioids/src/Data/: Dioid.hs  Interval.hs  Positive.hs  Ring.hs  Semiring.hs  Signed.hs  Tropical.hs  Valid.hs  Warning.hs
dioids/src/Data/Dioid/: Property.hs
dioids/src/Data/Semiring/: Dioid.hs  Endomorphism.hs  Free.hs  Matrix.hs  Polynomial.hs  Property.hs  Signed.hs
optics/: README.md  optics.cabal
optics/src/Data/Profunctor/: Optic.hs
optics/src/Data/Profunctor/Optic/: Fold.hs  Grate.hs  Iso.hs  Lens.hs  Over.hs  Prelude.hs  Prism.hs  Review.hs  Type.hs  View.hs
optics/src/Data/Profunctor/Optic/Fold/: Affine.hs  Monoid.hs  Semigroup.hs  Semiring.hs  Wrapped.hs
optics/src/Data/Profunctor/Optic/Traversal/: Affine.hs  Monoid.hs  Semigroup.hs
optics/src/Data/Profunctor/Optic/Type/: Class.hs
poptic/: README.md  poptic.cabal
poptic-exception/: poptic-exception.cabal
poptic-exception/src/Control/Exception/: Optic.hs
poptic/src/Data/Profunctor/: Optic.hs
poptic/src/Data/Profunctor/Optic/: Affine.hs  AffineFold.hs  AffineTraversal.hs  Closure.hs  Environment.hs  Fold.hs  Fold1.hs  Getter.hs  Grate.hs  Iso.hs  Lens.hs  Operator.hs  Operators.hs  Over.hs  Prelude.hs  Prism.hs  Review.hs  Setter.hs  Traversal.hs  Traversal1.hs  Type.hs  Types.hs  View.hs
poptic/src/Data/Profunctor/Optic/Fold/: Affine.hs  Monoid.hs  NonEmpty.hs  Semigroup.hs  Semiring.hs  Wrapped.hs
poptic/src/Data/Profunctor/Optic/Operator/: Indexed.hs  Task.hs
poptic/src/Data/Profunctor/Optic/Traversal/: Affine.hs  Monoid.hs  NonEmpty.hs  Semigroup.hs
poptic/src/Data/Profunctor/Optic/Type/: Class.hs  VL.hs
poptic/src/Data/Profunctor/Optic/Types/: Class.hs
pref/: README.md  logger.hs  main.hs  pref.cabal
pref/src/Data/Profunctor/: PRef.hs
pref/src/Data/Profunctor/Reference/: Global.hs  IORef.hs  Optic.hs  PError.hs  PIORef.hs  PIORefs.hs  PMVar.hs  PRef.hs  PRefs.hs  PStream.hs  PStreams.hs  Simple.hs  Types.hs
profunctor-arrows/: profunctor-arrows.cabal
profunctor-arrows/src/Data/Profunctor/: Arrow.hs  Env.hs  Extra.hs  Misc.hs  Scratch.hs  Trans.hs
profunctor-arrows/src/Data/Profunctor/Arrow/: Adapter.hs  Affine.hs  Choice.hs  Closed.hs  Free.hs  Internal.hs  Setter.hs  Strong.hs  Traversing.hs
profunctor-arrows/src/Data/Profunctor/Trans/: Adapter.hs  Affine.hs  Class.hs  Closed.hs  Internal.hs  Setter.hs  Strong.hs  Traversal.hs
profunctor-folds/: profunctor-folds.cabal
profunctor-folds/src/Data/Profunctor/: Fold.hs  Fold1.hs
profunctor-misc/: profunctor-misc.cabal
profunctor-misc/src/Data/Profunctor/: Arrow.hs  Bistar.hs  Misc.hs  Orphan.hs
profunctor-misc/src/Data/Profunctor/Strong/: Free.hs
profunctor-optic/: README.md
profunctor-optic/src/Data/Profunctor/Optic/: Affine.hs  Closure.hs  Fold.hs  Getter.hs  Iso.hs  Lens.hs  (+6 more)
profunctor-optics/: ChangeLog.md  LICENSE  README.md  profunctor-optics.cabal
profunctor-optics-th/: ChangeLog.md  profunctor-optics-th.cabal
profunctor-optics-th/src/Data/Profunctor/Optic/: TH.hs
profunctor-optics-th/src/Data/Profunctor/Optic/TH/: Internal.hs
profunctor-optics-th/src/Data/Profunctor/Optic/TH/Internal/: Product.hs  Sum.hs  Utils.hs
profunctor-optics-th/src/Language/Haskell/TH/Optic/: Internal.hs
profunctor-optics-th/test/: templates.hs
profunctor-optics-th/test/Data/Profunctor/Optic/TH/: Tests.hs
profunctor-optics-th/test/Data/Profunctor/Optic/TH/Tests/: T799.hs
profunctor-optics/src/Control/Exception/: Optic.hs
profunctor-optics/src/Control/Monad/State/: Optic.hs
profunctor-optics/src/Data/ByteString/: Optic.hs
profunctor-optics/src/Data/Connection/: Optic.hs
profunctor-optics/src/Data/Connection/Optic/: Float.hs  Int.hs  Word.hs
profunctor-optics/src/Data/Either/: Optic.hs
profunctor-optics/src/Data/Profunctor/: Adapter.hs  Arrow.hs  Bistar.hs  Fold.hs  Fold1.hs  Indexed.hs  Misc.hs  Monoid.hs  Optic.hs  Orphan.hs  Product.hs  Tambara.hs  Task.hs
profunctor-optics/src/Data/Profunctor/Optic/: Affine.hs  Carrier.hs  Cofold.hs  Combinator.hs  Cotraversal.hs  Exception.hs  Fold.hs  Fold0.hs  Fold1.hs  Getter.hs  Grate.hs  Import.hs  Index.hs  Indexed.hs  Iso.hs  Lens.hs  List.hs  Machine.hs  Module.hs  Operator.hs  Option.hs  Pattern.hs  Prelude.hs  Prism.hs  Property.hs  Repn.hs  Review.hs  Scan.hs  Setter.hs  Traversal.hs  Traversal0.hs  Traversal1.hs  Type.hs  Types.hs  Unfold.hs  View.hs  Zoom.hs
profunctor-optics/src/Data/Profunctor/Optic/Fold/: Affine.hs  Monoid.hs  NonEmpty.hs  Semigroup.hs  Semiring.hs  Wrapped.hs
profunctor-optics/src/Data/Profunctor/Optic/List/: Prelude.hs
profunctor-optics/src/Data/Profunctor/Optic/Traversal/: Affine.hs  Monoid.hs  Semigroup.hs
profunctor-optics/src/Data/Profunctor/Optic/Type/: Class.hs  VL.hs
profunctor-optics/src/Data/Profunctor/Rep/: Fold.hs  Fold1.hs  Foldl.hs  Foldl1.hs  Foldr.hs
profunctor-optics/src/Data/Tuple/: Optic.hs
profunctor-optics/src/Numeric/: Optic.hs
profunctor-optics/src/Numeric/Optic/: Float.hs  Int.hs  Word.hs
profunctor-optics/test/: doctest.hs  doctests.hs  test.hs
profunctor-optics/test/Test/Data/Connection/Optic/: Float.hs  Int.hs
profunctor-ref/: README.md  profunctor-ref.cabal
profunctor-ref/src/Data/: Ref.hs
profunctor-ref/src/Data/Profunctor/: PRef'.hs  PRef.hs
properties/: properties.cabal
properties/src/Test/: Property.hs
properties/src/Test/Property/: Function.hs  Operation.hs  Relation.hs  Util.hs
properties/src/Test/Property/Function/: Equivalent.hs  Idempotent.hs  Injective.hs  Invertible.hs  Monotone.hs
properties/src/Test/Property/Operation/: Annihilative.hs  Associative.hs  Commutative.hs  Distributive.hs  Neutral.hs
properties/src/Test/Property/Relation/: Connex.hs  Reflexive.hs  Symmetric.hs  Transitive.hs
rings/: rings.cabal
rings/src/: Orphans.hs
rings/src/Data/: Dioid.hs  Hemiring.hs  Ring.hs  Semiring.hs  Signed.hs  Valid.hs  Warning.hs
rings/src/Data/Semiring/: Cayley.hs  Endomorphism.hs  Free.hs
(+1 files in other folders)
