name:                dioids
version:             0.0.1
synopsis:            Semirings & dioids.
-- description:         
homepage:            github.com/cmk/dioids
license:             BSD3
license-file:        LICENSE
author:              Chris McKinlay
maintainer:          chris.mckinlay@gmail.com
-- copyright:           
category:            Math
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:
     Data.Dioid
     --Data.Dioid.Tropical
     Data.Dioid.Signed
     Data.Dioid.Valid
     Data.Dioid.Warning
     Data.Semiring
     Data.Semiring.Endomorphism
     --Data.Semiring.Free
     --Data.Semiring.Free.Unital
     --Data.Semiring.Polynomial
     --Data.Semiring.Matrix
     --Data.Ring
     Orphans
     P
  -- other-modules:
  -- other-extensions:
  default-extensions:
     AllowAmbiguousTypes
     DerivingVia
     DeriveFunctor
     DeriveGeneric
     FlexibleInstances
     GeneralizedNewtypeDeriving
     RankNTypes
     ScopedTypeVariables
     TypeApplications
     NoImplicitPrelude

  build-depends:       
      base <5.0
    , assoc
    , containers
    , contravariant
    , errors
    , free
    , lattices
    , microlens
    , nonempty-containers
    , safe
    , selective
    , semigroupoids
    , transformers

  hs-source-dirs:      src
  default-language:    Haskell2010
