cabal-version: >= 1.10

name:           optics
version:        0.0.0.1
synopsis:       Profunctor optics
description:    A profunctor-encoded optics library compatible with the typeclasses in 'profunctors'.
category:       Data, Lenses
homepage:       https://github.com/cmk/optics
bug-reports:    https://github.com/cmk/optics/issues
author:         Chris McKinlay
maintainer:     Chris McKinlay
copyright:      2019 Chris McKinlay
license:        BSD3
build-type:     Simple

source-repository head
  type: git
  location: https://github.com/cmk/optics

library
  exposed-modules:
      Data.Profunctor.Optic
      Data.Profunctor.Optic.Fold
      Data.Profunctor.Optic.Fold.Monoid
      Data.Profunctor.Optic.Fold.Semigroup
      --Data.Profunctor.Optic.Fold.Semiring
      Data.Profunctor.Optic.Fold.Affine
      --Data.Profunctor.Optic.Fold.Indexed
      Data.Profunctor.Optic.Iso
      Data.Profunctor.Optic.Lens
      --Data.Profunctor.Optic.Lens.Rep
      --Data.Profunctor.Optic.Lens.Free
      Data.Profunctor.Optic.Over
      Data.Profunctor.Optic.Grate
      Data.Profunctor.Optic.Prelude
      Data.Profunctor.Optic.Prism
      Data.Profunctor.Optic.Review
      Data.Profunctor.Optic.Traversal
      Data.Profunctor.Optic.Traversal.Affine
      Data.Profunctor.Optic.Traversal.Monoid
      --Data.Profunctor.Optic.Traversal.Indexed
      Data.Profunctor.Optic.Traversal.Semigroup
      Data.Profunctor.Optic.Type
      Data.Profunctor.Optic.Type.Class
      Data.Profunctor.Optic.Type.VL
      Data.Profunctor.Optic.Type.Indexed
      Data.Profunctor.Optic.Type.Task
      Data.Profunctor.Optic.View

  hs-source-dirs:
      src
  default-extensions: 
      ConstraintKinds 
      RankNTypes 
      MultiParamTypeClasses 
      OverloadedStrings 
      TupleSections 
      FlexibleInstances 
      ExistentialQuantification
      NoImplicitPrelude
      QuantifiedConstraints

  ghc-options: -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
  build-depends:
      base >=4.9 && <5.0
    , bifunctors
    , containers
    --, constraints
    --, safe
    , comonad
    , contravariant
    , distributive
    , dlist
    , dlist-nonempty
    , semigroupoids
    , selective
    , profunctors
    , mtl
    , transformers
    , free
    , unliftio
    , unliftio-core
    , dioids
    --, nonempty-alternative

test-suite doctests
  type:          exitcode-stdio-1.0
  ghc-options:   -threaded
  main-is:       doctests.hs
  build-depends: 
      base
    , doctest >= 0.8
    , doctest-discover
    , profunctor-optic
    , simple-reflect >= 0.3.1
  hs-source-dirs: .

