cabal-version: >= 1.10

name:           pref
version:        0.0.0.1
synopsis:       Profunctor references.
description:    Profunctor references.
category:       Data, Lenses
homepage:       https://github.com/cmk/putil
bug-reports:    https://github.com/cmk/putil/issues
author:         Chris McKinlay
maintainer:     Chris McKinlay
copyright:      2019 Chris McKinlay
license:        BSD3
build-type:     Simple

source-repository head
  type: git
  location: https://github.com/cmk/putil

library
  exposed-modules:
      Data.Profunctor.Reference.Global
      Data.Profunctor.Reference.PError
      Data.Profunctor.Reference.PIORef
      Data.Profunctor.Reference.PIORefs
      Data.Profunctor.Reference.PMVar
      Data.Profunctor.Reference.PRef
      Data.Profunctor.Reference.PRefs
      Data.Profunctor.Reference.PStreams
      Data.Profunctor.Reference.Types

  hs-source-dirs:
      src
  default-extensions: ConstraintKinds RankNTypes MultiParamTypeClasses OverloadedStrings
  ghc-options: -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
  build-depends:
      base >=4.9 && <5.0
    , contravariant
    , mtl
    , profunctors
    , poptic
    , poptic-exception
    , safe-exceptions
    , stm
    , StateVar
    , template-haskell
    , transformers
    , validation
    , io-streams
    , unliftio-core
    , unliftio

executable main
  main-is: main.hs
  build-depends:
      base >=4.9 && <5.0
    , fast-logger
    , io-streams
    , mtl
    , pref
    , poptic
    , text
    , unliftio-core
    , validation

executable logger
  main-is: logger.hs
  build-depends:
      base >=4.9 && <5.0
    , fast-logger
    , text
    , mtl
    , pref
    , poptic

test-suite doctests
  type:          exitcode-stdio-1.0
  ghc-options:   -threaded
  main-is:       doctests.hs
  build-depends: 
      base
    , doctest >= 0.8
    , doctest-discover
    , pref
  HS-Source-Dirs: .

