cabal-version: >= 1.10

name:           profunctor-arrows
version:        0.0.0.1
synopsis:       Profunctor miscellany
description:    Miscellaneous functions on profunctors
category:       Data, Profunctors
homepage:       https://github.com/cmk/profunctor-extras
bug-reports:    https://github.com/cmk/profunctor-extras/issues
author:         Chris McKinlay
maintainer:     Chris McKinlay
copyright:      2019 Chris McKinlay
license:        BSD3
license-file:   LICENSE
build-type:     Simple

source-repository head
  type: git
  location: https://github.com/cmk/profunctor-extras

library
  exposed-modules:
      Data.Profunctor.Arrow
      Data.Profunctor.Free
      Data.Profunctor.Misc
  hs-source-dirs:
      src
  default-extensions:
      RankNTypes
      ConstraintKinds
      TypeFamilies
      TupleSections
      TypeOperators
      FlexibleContexts
      FlexibleInstances
      QuantifiedConstraints
  default-language: Haskell2010
  ghc-options: -Wall
  build-depends:
      base              >= 4.9   && <5.0
    , comonad           >= 4     && < 6
    , contravariant     >= 1     && < 2
    , profunctors       >= 5.3   && < 6
    , containers
    , tagged
