cabal-version: >= 1.10

name:           profunctor-arrows
version:        0.0.0.1
synopsis:       Profunctor arrows
description:    Profunctor prearrows, arrows, and transformers.
category:       Data, Profunctors
homepage:       https://github.com/cmk/profunctor-extras
bug-reports:    https://github.com/cmk/profunctor-extras/issues
author:         Chris McKinlay
maintainer:     Chris McKinlay
copyright:      2019 Chris McKinlay
license:        BSD3
license-file:   LICENSE
build-type:     Simple

source-repository head
  type: git
  location: https://github.com/cmk/profunctor-extras

library
  exposed-modules:
      Data.Profunctor.Arrow
      Data.Profunctor.Arrow.Free
      Data.Profunctor.Trans.Adapter
      Data.Profunctor.Trans.Affine
      Data.Profunctor.Trans.Choice
      Data.Profunctor.Trans.Closed
      Data.Profunctor.Trans.Strong
      Data.Profunctor.Trans.Traversal
      Data.Profunctor.Extra
      Data.Profunctor.Scratch
  other-modules:
      Data.Profunctor.Trans.Internal
  hs-source-dirs:
      src
  default-extensions:
      RankNTypes
      ConstraintKinds
      TypeFamilies
      TupleSections
      TypeOperators
      FlexibleContexts
      FlexibleInstances
      QuantifiedConstraints
  default-language: Haskell2010
  ghc-options: -Wall
  build-depends:
      base              >= 4.9   && <5.0
    , comonad           >= 4     && < 6
    , distributive
    , profunctors       >= 5.3   && < 6
    , containers
    , tagged
