cabal-version: >= 1.10

name:           profunctor-folds
version:        0.0.0.1
synopsis:       Profunctor folds
description:    Use profunctors to mediate resources and hide computations.
category:       bsd3, control, lenses, library
homepage:       https://github.com/cmk/profunctor-extras
bug-reports:    https://github.com/cmk/profunctor-extras/issues
author:         Chris McKinlay
maintainer:     Chris McKinlay
copyright:      2019 Chris McKinlay
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:  ChangeLog.md

source-repository head
  type: git
  location: https://github.com/cmk/profunctor-extras

library
  exposed-modules:
      Data.Profunctor.Fold
      --Data.Profunctor.Fold.NonEmpty
      --Data.Profunctor.Fold.Environment
      Data.Profunctor.Fold1
      Control.Exception.Fold

  default-language: Haskell2010

  hs-source-dirs:
      src
  default-extensions: 
      ConstraintKinds
      RankNTypes 
      MultiParamTypeClasses 
      OverloadedStrings 
      TupleSections
      FlexibleContexts
      FlexibleInstances 
      ExistentialQuantification
      QuantifiedConstraints
      ScopedTypeVariables
      TupleSections
      TypeOperators
      TypeApplications
      TypeFamilies

  ghc-options: -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
  build-depends:
      base >=4.9 && <5.0
    , adjunctions
    , comonad
    , contravariant
    , distributive
    , foldl
    , mtl
    , profunctor-misc
    , profunctor-optics
    , profunctors
    , property
    , recursion-schemes
    , semigroupoids
    , strict
    , transformers
    , unliftio-core
    , unliftio
