cabal-version: >= 1.10

name:           profunctor-misc
version:        0.0.0.1
synopsis:       Profunctor miscellany
description:    Miscellaneous functions on profunctors
category:       Data, Lenses
homepage:       https://github.com/cmk/profunctor-extras
bug-reports:    https://github.com/cmk/profunctor-extras/issues
author:         Chris McKinlay
maintainer:     Chris McKinlay
copyright:      2019 Chris McKinlay
license:        BSD3
build-type:     Simple

source-repository head
  type: git
  location: https://github.com/cmk/profunctor-extras

library
  exposed-modules:
      Data.Profunctor.Arrow
      Data.Profunctor.Bistar
      Data.Profunctor.Orphan
      Data.Profunctor.Misc

  hs-source-dirs:
      src
  default-extensions: 
      ConstraintKinds
      RankNTypes 
      MultiParamTypeClasses 
      OverloadedStrings 
      TupleSections
      FlexibleContexts
      FlexibleInstances 
      ExistentialQuantification
      NoImplicitPrelude
      QuantifiedConstraints
      ScopedTypeVariables
      TupleSections
      TypeOperators
      TypeApplications
      TypeFamilies

  ghc-options: -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
  build-depends:
      base >=4.9 && <5.0
    , adjunctions
    , assoc
    , bifunctors
    , comonad
    , contravariant
    , distributive
    , free
    , mtl
    , profunctors
    , pipes
    , semigroupoids
    , tagged
    , transformers
