cabal-version: >= 1.10

name:           profunctor-optics-th
version:        0.0.0.1
synopsis:       Profunctor optics
description:    Generate optics via template Haskell 
category:       Data, Lenses
homepage:       https://github.com/cmk/profunctor-extras
bug-reports:    https://github.com/cmk/profunctor-extras/issues
author:         Chris McKinlay
maintainer:     Chris McKinlay
copyright:      2019 Chris McKinlay
license:        BSD3
build-type:     Simple

source-repository head
  type: git
  location: https://github.com/cmk/profunctor-extras

library
  default-language: Haskell2010
  hs-source-dirs:   src
  ghc-options:      -Wall
  default-extensions:
    RankNTypes
    FlexibleContexts

  build-depends: base                   >= 4.9       && <5
               , containers             >= 0.5.7.1   && <0.7
               , mtl                    >= 2.2.2     && <2.3
               , profunctor-optics
               , template-haskell       >= 2.11      && <2.16
               , th-abstraction         >= 0.2.1     && <0.4
               , transformers           >= 0.5       && <0.6

  exposed-modules: Data.Profunctor.Optic.TH

                   -- internal modules
                   Data.Profunctor.Optic.TH.Internal.Utils
                   Data.Profunctor.Optic.TH.Internal.Product
                   Data.Profunctor.Optic.TH.Internal.Sum

  other-modules:   Language.Haskell.TH.Optic.Internal

test-suite optics-th-tests
  default-language: Haskell2010
  hs-source-dirs:   tests
  ghc-options:      -Wall

  build-depends: base
               , profunctor-optics
               , profunctor-optics-th

  type:    exitcode-stdio-1.0
  main-is: Data/Profunctor/Optic/TH/Tests.hs

  other-modules: Data.Profunctor.Optic.TH.Tests.T799
