cabal-version: >= 1.10

name:           profunctor-optics-th
version:        0.0.0.1
synopsis:       Profunctor optics
description:    Generate optics via template Haskell 
category:       Data, Lenses
homepage:       https://github.com/cmk/profunctor-extras
bug-reports:    https://github.com/cmk/profunctor-extras/issues
author:         Chris McKinlay
maintainer:     Chris McKinlay
copyright:      2019 Chris McKinlay
license:        BSD3
build-type:     Simple

source-repository head
  type: git
  location: https://github.com/cmk/profunctor-extras

library
  exposed-modules:     Data.Profunctor.Optic.TH
                       Data.Profunctor.Optic.TH.Internal
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.5 && <5
                     , profunctor-optics >=0.0.0.1 && <0.1
                     , containers >=0.4.0 && <0.7
                     , transformers
                     , template-haskell >=2.7 && <2.16
                     , th-abstraction >=0.2.1 && <0.4

  ghc-options:
    -Wall -fwarn-tabs
    -O2 -fdicts-cheap -funbox-strict-fields
    -fmax-simplifier-iterations=10

  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite templates
  type: exitcode-stdio-1.0
  main-is: templates.hs
  ghc-options: -Wall -threaded
  hs-source-dirs: test

  build-depends: base, profunctor-optics, profunctor-optics-th

  default-language: Haskell2010
