cabal-version: >= 1.10

name:           profunctor-ref
version:        0.0.0.1
synopsis:       Profunctor references.
description:    Profunctor references.
category:       Data, Lenses
homepage:       https://github.com/cmk/profunctor-util
bug-reports:    https://github.com/cmk/profunctor-util/issues
author:         Chris McKinlay
maintainer:     Chris McKinlay
copyright:      2019 Chris McKinlay
license:        BSD3
build-type:     Simple

source-repository head
  type: git
  location: https://github.com/cmk/profunctor-util

library
  exposed-modules:
      Data.Profunctor.PRef
      Data.Profunctor.PRef'
      Data.Ref

  hs-source-dirs:
      src
  default-extensions: ConstraintKinds RankNTypes MultiParamTypeClasses OverloadedStrings
  ghc-options: -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
  build-depends:
      base >=4.9 && <5.0
    , mtl
    , profunctors
    , profunctor-optic
    , stm
    , transformers

test-suite doctests
  type:          exitcode-stdio-1.0
  ghc-options:   -threaded
  main-is:       doctests.hs
  build-depends: 
      base
    , doctest >= 0.8
    , doctest-discover
    , profunctor-ref
  HS-Source-Dirs: .

