name:                properties
version:             0.0.1
synopsis:            common properties
homepage:            github.com/cmk/properties
license:             BSD3
license-file:        LICENSE
author:              Chris McKinlay
maintainer:          chris.mckinlay@gmail.com
category:            Testing, Math
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:
     Test.Property
     Test.Property.Function
     Test.Property.Function.Equivalent
     Test.Property.Function.Idempotent
     Test.Property.Function.Injective
     Test.Property.Function.Invertible
     Test.Property.Function.Monotone
     Test.Property.Operation
     Test.Property.Operation.Annihilative
     Test.Property.Operation.Associative
     Test.Property.Operation.Commutative
     Test.Property.Operation.Distributive
     Test.Property.Operation.Neutral
     Test.Property.Relation
     Test.Property.Relation.Connex
     Test.Property.Relation.Reflexive
     Test.Property.Relation.Symmetric
     Test.Property.Relation.Transitive
     Test.Property.Util

  default-extensions:
     FlexibleInstances
     RankNTypes
     ScopedTypeVariables
     TypeApplications
     --NoImplicitPrelude

  build-depends:       
      base <5.0
    --, contravariant
    --, errors
    --, safe
    --, semigroupoids

  hs-source-dirs:      src
  default-language:    Haskell2010


