name:                rings
version:             0.0.1
synopsis:            Rings, semirings, hemirings, and dioids.
-- description:         
homepage:            github.com/cmk/rings
license:             BSD3
license-file:        LICENSE
author:              Chris McKinlay
maintainer:          chris.mckinlay@gmail.com
-- copyright:           
category:            Math
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:
     Data.Dioid
     Data.Semiring
     Data.Hemiring
     Data.Signed
     Data.Valid
     Data.Warning
  other-modules:
     P
  -- other-extensions:
  default-extensions:
     DerivingVia
     DeriveFunctor
     DeriveGeneric
     FlexibleInstances
     GeneralizedNewtypeDeriving

  build-depends:       
      base <5.0
    , categories
    , containers
    , contravariant
    , free
    , semigroupoids

  hs-source-dirs:      src
  default-language:    Haskell2010
