name:                rings
version:             0.0.1
synopsis:            Rings, semirings, and dioids.
-- description:         
homepage:            github.com/cmk/rings
license:             BSD3
license-file:        LICENSE
author:              Chris McKinlay
maintainer:          chris.mckinlay@gmail.com
-- copyright:           
category:            Math
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:
     Data.Dioid
     Data.Semiring
     Data.Semiring.Cayley
     Data.Semiring.Free
     -- Data.Semiring.Free.Unital
     Data.Signed
     Data.Valid
     Data.Warning
     -- Data.Ring
     -- Zoo
     Orphans
  other-modules:
     P
  -- other-extensions:
  default-extensions:
     AllowAmbiguousTypes
     DerivingVia
     DeriveFunctor
     DeriveGeneric
     FlexibleInstances
     GeneralizedNewtypeDeriving
     RankNTypes
     ScopedTypeVariables
     TypeApplications
     --NoImplicitPrelude

  build-depends:       
      base <5.0
    , categories
    , containers
    , contravariant
    , nonempty-containers
    , free
    , profunctors
    , semigroupoids

  hs-source-dirs:      src
  default-language:    Haskell2010
